--- a/src/xgp3.0.0/upload/application/libraries/battle_engine/.htaccess
+++ b/src/xgp3.0.0/upload/application/libraries/battle_engine/.htaccess
@@ -1,9 +1,8 @@
-IndexIgnore TestCombat.php
-IndexIgnore RunnableTest.php
-IndexIgnore Test.php
-IndexIgnore *.txt
-IndexIgnore *.png
-IndexIgnore *.jpg
-IndexIgnore *.css
-IndexIgnore *.html
-IndexIgnore *.js
+<Files *.*> 
+    deny from all
+    Allow from 127.0.0.1
+</Files>
+<Files "index.php">
+    Order Allow,Deny
+    Allow from all
+</Files>
