--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-
+# Disable config files
 src/xgp3.0.0/upload/application/config/config.php
-
 src/xgp3.0.0/upload/application/config/config.xml
 
+# Disable error log
 src/xgp3.0.0/upload/data/logs/ErrorLog.php
+
+# Disable PHPStorm system files
+.idea
