--- a/src/xgp3.0.0/upload/application/config/config.xml.cfg
+++ b/src/xgp3.0.0/upload/application/config/config.xml.cfg
@@ -62,7 +62,7 @@
 	</config>
 	<config>
 		<name>adm_attack</name>
-		<value>0</value>
+		<value>1</value>
 	</config>
 	<config>
 		<name>debug</name>
@@ -82,7 +82,7 @@
 	</config>
 	<config>
 		<name>noobprotectiontime</name>
-		<value>0</value>
+		<value>50000</value>
 	</config>
 	<config>
 		<name>noobprotectionmulti</name>
@@ -98,11 +98,11 @@
 	</config>
 	<config>
 		<name>metal_basic_income</name>
-		<value>30</value>
+		<value>90</value>
 	</config>
 	<config>
 		<name>crystal_basic_income</name>
-		<value>15</value>
+		<value>45</value>
 	</config>
 	<config>
 		<name>deuterium_basic_income</name>
@@ -125,7 +125,7 @@
 		<value>1</value>
 	</config>
 	<config>
-		<name>stat_settings</name>
+		<name>stat_points</name>
 		<value>1000</value>
 	</config>
 	<config>
@@ -133,12 +133,8 @@
 		<value>1</value>
 	</config>
 	<config>
-		<name>stat</name>
+		<name>stat_admin_level</name>
 		<value>0</value>
-	</config>
-	<config>
-		<name>stat_level</name>
-		<value>2</value>
 	</config>
 	<config>
 		<name>stat_last_update</name>
