Ignored docs dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 src/upload/application/config/config.php
 src/upload/data/logs/ErrorLog.php
 src/upload/tests/build/
-src/upload/data/logs/ErrorLog.php
+src/docs/
