--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ src/upload/application/config/config.php
 src/upload/data/logs/ErrorLog.php
 src/upload/tests/build/
 src/docs/
+src/upload/data/logs/ErrorLog.php
