Improvements over PHP Error logs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 src/upload/application/config/config.php
-src/upload/data/logs/ErrorLog.php
 src/upload/tests/build/
 src/docs/
-src/upload/data/logs/ErrorLog.php
+src/upload/data/logs/
