- changed logs location

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 src/upload/application/config/config.php
+src/upload/application/logs/*.txt
 src/upload/tests/build/
+src/upload/tests/_reports/
 src/docs/
-src/upload/data/logs/*.txt
