--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "bartlett/php-compatinfo": "^5.3"
+    },
+    "scripts": {
+        "phpcompatinfo": [
+            "vendor/bin/phpcompatinfo analyser:run ./src"
+        ]
     }
 }
