--- a/src/upload/.htaccess
+++ b/src/upload/.htaccess
@@ -1,5 +1,13 @@
 <IfModule mod_rewrite.c>
     RewriteEngine on
-    RewriteRule  ^$ public/    [L]
-    RewriteRule  (.*) public/$1 [L]
+
+    # define RewriteBase and store it
+    RewriteCond %{REQUEST_URI}::$1 ^(.*?/)(.*)::\2$
+    RewriteRule ^(.*)$ - [E=BASE:%1]
+
+    # redirect requests to public folder
+    RewriteCond %{THE_REQUEST} /public/([^\s?]*) [NC]
+    RewriteRule ^ %1 [L,NE,R=302]
+
+    RewriteRule ^((?!public/).*)$ %{ENV:BASE}/public/$1 [L,NC]
 </IfModule>
