--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,25 @@
 {
+    "name": "xg-proyect/xg-proyect-v3.x.x",
+    "description": "Xtreme Gamez Proyecto",
+    "version": "3.2.0",
+    "type": "project",
+    "homepage": "https://xgproyect.org",
+    "license": "GPL-3.0-only",
     "require-dev": {
-        "bartlett/php-compatinfo": "^5.4"
+        "bartlett/php-compatinfo": "^5.4",
+        "phpunit/phpunit": "^8"
+    },
+    "autoload": {
+        "classmap": [
+            "src/upload/"
+        ]
     },
     "scripts": {
         "phpcompatinfo": [
             "vendor/bin/phpcompatinfo analyser:run ./src"
+        ],
+        "test": [
+            "vendor/bin/phpunit tests --verbose --config src/upload/tests/phpunit.xml --testsuite xgp_application"
         ]
     }
 }
