--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "license": "GPL-3.0-only",
     "require-dev": {
         "bartlett/php-compatinfo": "^5.4",
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "classmap": [
