--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,38 @@
 {
     "name": "xg-proyect/xg-proyect-v3.x.x",
     "description": "Xtreme Gamez Proyecto",
+    "keywords": [
+        "ogame",
+        "clon"
+    ],
     "version": "3.2.0",
     "type": "project",
     "homepage": "https://xgproyect.org",
     "license": "GPL-3.0-only",
-    "require-dev": {
-        "bartlett/php-compatinfo": "^5.4",
-        "phpunit/phpunit": "^8",
-        "squizlabs/php_codesniffer": "^3.5"
+    "support": {
+        "source": "https://github.com/XGProyect/XG-Proyect-v3.x.x",
+        "issues": "https://github.com/XGProyect/XG-Proyect-v3.x.x/issues"
     },
+    "require": {
+        "php": "^7.3|^8.0"
+    },
+    "authors": [
+        {
+            "name": "Lucas Kovács",
+            "homepage": "https://github.com/LucasKovacs",
+            "role": "Lead"
+        }
+    ],
     "autoload": {
         "classmap": [
             "src/upload/"
         ]
+    },
+    "require-dev": {
+        "php": "^7.3|^8.0",
+        "bartlett/php-compatinfo": "^5.4",
+        "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "scripts": {
         "phpcompatinfo": [
