--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,15 @@
 {
     "name": "xg-proyect/xg-proyect-v3.x.x",
-    "description": "Xtreme Gamez Proyecto",
+    "description": "XG Proyect Open-source OGame Clon",
     "keywords": [
         "ogame",
         "clon"
     ],
-    "version": "3.2.0",
     "type": "project",
     "homepage": "https://xgproyect.org",
-    "license": "GPL-3.0-only",
     "support": {
         "source": "https://github.com/XGProyect/XG-Proyect-v3.x.x",
         "issues": "https://github.com/XGProyect/XG-Proyect-v3.x.x/issues"
-    },
-    "require": {
-        "php": "^7.3|^8.0"
     },
     "authors": [
         {
@@ -23,17 +18,22 @@
             "role": "Lead"
         }
     ],
+    "license": "GPL-3.0-only",
+    "require": {
+        "php": "^7.3|^8.0"
+    },
+    "require-dev": {
+        "bartlett/php-compatinfo": "^5.4",
+        "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "^3.5"
+    },
     "autoload": {
         "classmap": [
             "src/upload/"
         ]
     },
-    "require-dev": {
-        "php": "^7.3|^8.0",
-        "bartlett/php-compatinfo": "^5.4",
-        "phpunit/phpunit": "^8",
-        "squizlabs/php_codesniffer": "^3.5"
-    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "scripts": {
         "phpcompatinfo": [
             "vendor/bin/phpcompatinfo analyser:run ./src"
