--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xg-proyect/xg-proyect-v3.x.x",
+    "name": "xgproyect/xg-proyect",
     "description": "XGP Open-source OGame Clon",
     "keywords": [
         "ogame",
