--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xgproyect/xg-proyect",
+    "name": "xgproyect/xgproyect",
     "description": "XGP Open-source OGame Clon",
     "keywords": [
         "ogame",
