--- a/src/upload/public/.htaccess
+++ b/src/upload/public/.htaccess
@@ -1,6 +1,9 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
+    # Remove additional public paths
+    RewriteRule "^/?(public/)+/?(.+)" "/public/$2"  [NC,L,R]
+
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
