--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,6 +37,14 @@ jobs:
   min-version:
     name: Check minimum version
     runs-on: ubuntu-20.04
+    services:
+      mysql:
+        image: bitnami/mariadb:10.6
+        ports:
+          - 3306:3306
+        env:
+          MARIADB_ROOT_PASSWORD: xgproyect
+          MARIADB_DATABASE: xgp
     steps:
     - uses: actions/checkout@v2
 
@@ -53,4 +61,6 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Run phpcompatinfo
+      env:
+        DATABASE_URL: "mysql://root:xgproyect@mysql:${{ job.services.nginx.ports['3306'] }}/xgp?serverVersion=mariadb-10.6"
       run: composer run-script phpcompatinfo
