--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -62,5 +62,5 @@ jobs:
 
     - name: Run phpcompatinfo
       env:
-        DATABASE_URL: "mysql://root:xgproyect@mysql:${{ job.services.nginx.ports['3306'] }}/xgp?serverVersion=mariadb-10.6.5"
+        DATABASE_URL: "mysql://root:xgproyect@127.0.0.1:${{ job.services.nginx.ports['3306'] }}/xgp?serverVersion=mariadb-10.6.5"
       run: composer run-script phpcompatinfo
