Disable phpcompatinfo workflow

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,6 +37,8 @@ jobs:
   min-version:
     name: Check minimum version
     runs-on: ubuntu-20.04
+    # disabled, table xgp.functions does not exist
+    if: false
     services:
       mysql:
         image: bitnami/mariadb:10.6.5
