--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,6 +34,14 @@ jobs:
       with:
         path: src/upload/
         options: --exclude=*.log
+  php-cs-fixer:
+    name: Run PHP-CS-Fixer
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+    - uses: docker://oskarstark/php-cs-fixer-ga:3.4.0.1
+      with:
+        args: --diff src/
   min-version:
     name: Check minimum version
     runs-on: ubuntu-20.04
