better email support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,19 @@ services:
       args:
         PHP_VERSION: 7.3
     container_name: xgproyect-v3
+    restart: always
     ports:
-      - 127.0.0.1:80:80
-      - 127.0.0.1:443:443
+      - 80:80
+      - 443:443
     volumes:
       - ./src:/var/www/html
     depends_on:
       - db
   db:
     image: mysql:5.7
+    restart: on-failure
     ports:
-      - 127.0.0.1:33060:3306 # change ip if required
+      - 33060:3306
     volumes:
       - ./data:/docker-entrypoint-initdb.d
     environment:
@@ -25,7 +27,14 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
-        - "8081:80"
+      - 8081:80
     environment:
-        MYSQL_ROOT_PASSWORD: root
-        PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: root
+      PMA_HOST: db
+  mailhog:
+    image: mailhog/mailhog
+    container_name: mailhog
+    restart: on-failure
+    ports:
+      - 1025:1025 # smtp server
+      - 8025:8025 # web ui
