--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -56,6 +56,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: docker://oskarstark/php-cs-fixer-ga:3.4.0.1
       with:
+        path: src/
         args: --diff --dry-run src/
   min-version:
     name: Check minimum version
