--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -40,9 +40,13 @@ jobs:
 
     - name: Validate composer.json and composer.lock
       run: composer validate
+      with:
+        path: src/
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
+      with:
+        path: src/
 
     - name: Run phplint
       uses: overtrue/phplint@4.1.0
@@ -56,7 +60,6 @@ jobs:
     - uses: actions/checkout@v2
     - uses: docker://oskarstark/php-cs-fixer-ga:3.4.0.1
       with:
-        path: src/
         args: --diff --dry-run src/
   min-version:
     name: Check minimum version
@@ -80,9 +83,13 @@ jobs:
 
     - name: Validate composer.json and composer.lock
       run: composer validate
+      with:
+        path: src/
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
+      with:
+        path: src/
 
     - name: Setup database
       env:
