--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,7 +22,7 @@ jobs:
       run: composer validate --working-dir=src
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: composer install --prefer-dist --no-progress --no-suggest --working-dir=src
 
     - name: Run phpunit
       run: composer phpunit
@@ -39,10 +39,10 @@ jobs:
         extensions: gd, mysqli, opcache, zip
 
     - name: Validate composer.json and composer.lock
-      run: composer validate
+      run: composer validate --working-dir=src
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: composer install --prefer-dist --no-progress --no-suggest --working-dir=src
 
     - name: Run phplint
       uses: overtrue/phplint@4.1.0
@@ -78,15 +78,15 @@ jobs:
         extensions: gd, mysqli, opcache, zip
 
     - name: Validate composer.json and composer.lock
-      run: composer validate
+      run: composer validate --working-dir=src
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: composer install --prefer-dist --no-progress --no-suggest --working-dir=src
 
     - name: Setup database
       env:
         DATABASE_URL: "mysql://root:xgproyect@127.0.0.1:${{ job.services.nginx.ports['3306'] }}/xgp?serverVersion=mariadb-10.6.5"
-      run: cd src/vendor/bartlett/php-compatinfo-db/ && ../../bin/doctrine orm:schema-tool:create && bin/compatinfo-db db:init
+      run: cd vendor/bartlett/php-compatinfo-db/ && ../../bin/doctrine orm:schema-tool:create && bin/compatinfo-db db:init
 
     - name: Run phpcompatinfo
       env:
