--- a/src/composer.json
+++ b/src/composer.json
@@ -26,8 +26,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "friendsofphp/php-cs-fixer": "^3.16",
-        "symfony/var-dumper": "^6.2"
+        "bartlett/php-compatinfo": "6.1"
     },
     "config": {
         "allow-plugins": {
@@ -42,6 +41,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "phpcompatinfo": [
+            "vendor/bin/phpcompatinfo --progress analyser:run ./app/"
+        ],
         "phpunit": [
             "vendor/bin/phpunit --config tests/phpunit.xml --testsuite xgp_application"
         ]
